--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                         <span>linkedin.com/in/david-gershony</span>
                     </a>
                 </div>
+                <p class="based-in">Based in Seattle, WA and Irvine, CA</p>
             </section>
         </div>
     </main>
