--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="project-card">
                         <h3>8-K Insight</h3>
                         <p class="impact">A real-time trading engine that parses SEC filings using NLP to flag market-moving events for biotech stocks.</p>
-                        <p><em>Private project (not open-source)</em></p>
+                        <p><em>Coming out soon</em></p>
                     </div>
                     <div class="project-card">
                         <h3>VIRAL.AI</h3>
